--- a/index.html
+++ b/index.html
@@ -12,37 +12,56 @@
 
 <body>
 
+
+  <iframe class="chatbotScreen" id="chatbotScreen" width="350" height="430" style="display: none;" allow="microphone;"
+    src="https://console.dialogflow.com/api-client/demo/embedded/2642559c-6dfe-4bda-8083-e308f08aadbb"></iframe>
+
+  <button class="chatbot" onclick="chatOpen()">
+  </button>
+
   <header></header>
   <main>
     <div class="EarthPanel">
       <img src="/images/Evolution/Evolution1.png" alt="">
+      <div class="content">
+        <p class="year">2021</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas eaque, quidem iusto sed pariatur explicabo
+          optio corporis commodi qui tempora et hic rem est, consectetur modi veritatis sunt soluta ad iste non
+          molestias. Quidem, obcaecati. Soluta laborum magnam suscipit, sunt architecto possimus inventore iure libero
+          accusantium omnis sequi distinctio perspiciatis?</p>
+      </div>
     </div>
     <div class="EarthPanel">
-      <img src="/images/Evolution/Evolution2.png" alt="">
+      <img src="/images/Evolution/Evolution1.png" alt="">
+      <div class="content">
+        <p class="year">2021</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas eaque,
+          quidem iusto sed pariatur explicabo
+          optio corporis commodi qui tempora et hic rem est, consectetur modi veritatis sunt soluta ad iste non
+          molestias. Quidem, obcaecati. Soluta laborum magnam suscipit, sunt architecto possimus inventore iure libero
+          accusantium omnis sequi distinctio perspiciatis?</p>
+      </div>
     </div>
-    <div class="EarthPanel">
-      <img src="/images/Evolution/Evolution3.png" alt="">
-    </div>
-    <div class="EarthPanel">
-      <img src="/images/Evolution/Evolution4.png" alt="">
-    </div>
-    <div class="EarthPanel">
-      <img src="/images/Evolution/Evolution5.png" alt="">
-    </div>
-    <div class="EarthPanel">
-      <img src="/images/Evolution/Evolution6.png" alt="">
-    </div>
-    <div class="EarthPanel">
-      <img src="/images/Evolution/Evolution7.png" alt="">
-    </div>
-    <div class="EarthPanel">
-      <img src="/images/Evolution/Evolution8.png" alt="">
-    </div>
-    <div class="EarthPanel">
-      <img src="/images/Evolution/Evolution9.png" alt="">
-    </div>
+
   </main>
   <footer></footer>
+
+  <script>
+    var open = 0;
+    const chatbotScreen = document.getElementById('chatbotScreen');
+    function chatOpen() {
+      console.log(open);
+      if (open == 0) {
+        chatbotScreen.style.display = 'block';
+        open = 1;
+      }
+      if (open == 1) {
+        chatbotScreen.style.display = 'none';
+        open = 0;
+      }
+
+    }
+  </script>
 
 </body>
 
