--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Climate Change</title>
-
+  <link rel="shortcut icon" type="image/jpg" href="images/favicon.png"/>
   <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="./css/header.css">
   <link rel="stylesheet" href="./css/navPage.css">
 
 </head>
-
+<style>
+  .b-agent-demo_powered_by
+  {
+    display:none;
+  }
+</style>
 <body>
 
 
@@ -22,6 +28,11 @@
   </button>
 
   <header>
+    <div class="leftheader">
+      <span class="headerImg"><img class="favicon" src="images/favicon.png"></span>
+      <h2 class="heading">Melting Glaciers</h2>
+    </div>
+    
     <span class="hamburger"><span></span></span>
   </header>
 
@@ -34,95 +45,111 @@
     <div class="EarthPanel">
       <img src="/images/Evolution/Evolution1.png" alt="">
       <div class="content">
-        <p class="year">2021</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas eaque, quidem iusto sed pariatur explicabo
-          optio corporis commodi qui tempora et hic rem est, consectetur modi veritatis sunt soluta ad iste non
-          molestias. Quidem, obcaecati. Soluta laborum magnam suscipit, sunt architecto possimus inventore iure libero
-          accusantium omnis sequi distinctio perspiciatis?</p>
+        <p class="year">4 Billion Years Ago</p>
+        <p>It is hypothesized that several billion years ago earth was nothing but a piece
+          of floating lava only to be hit by an asteroid that carried water, leading it to be cooled down
+          into the planet we all know and love.
+          It is believed to be the sole cause for life on <b style="color:aqua"> Our Giant Blue Rock.</b>
+        </p>
       </div>
     </div>
     <div class="EarthPanel">
       <img src="/images/Evolution/Evolution2.png" alt="">
       <div class="content">
-        <p class="year">2021</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas eaque,
-          quidem iusto sed pariatur explicabo
-          optio corporis commodi qui tempora et hic rem est, consectetur modi veritatis sunt soluta ad iste non
-          molestias. Quidem, obcaecati. Soluta laborum magnam suscipit, sunt architecto possimus inventore iure libero
-          accusantium omnis sequi distinctio perspiciatis?</p>
+        <p class="year">400 Million Years Ago</p>
+        <p>After being cooled down, Earth was found to be 3/4th submerged under water with its life consisting of marine life.
+          <br>Life was flourishing at the time until the planet was struck by its first known Mass Extinction - <b style="color:#F45A36">The Ordovician–Silurian Mass Extinction,</b>
+          caused by a glaciation attributed to changing sea-levels, pushing upto 85% of marine species towards extinction.
+        </p>
       </div>
     </div>
     <div class="EarthPanel">
       <img src="/images/Evolution/Evolution3.png" alt="">
       <div class="content">
-        <p class="year">2021</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas eaque, quidem iusto sed pariatur explicabo
-          optio corporis commodi qui tempora et hic rem est, consectetur modi veritatis sunt soluta ad iste non
-          molestias. Quidem, obcaecati. Soluta laborum magnam suscipit, sunt architecto possimus inventore iure libero
-          accusantium omnis sequi distinctio perspiciatis?</p>
+        <p class="year">200 Million Years Ago</p>
+        <p>With life having recovered from the devastating <b style="color:#F45A36">End Permian Mass Extinction</b>, land animals had taken over the rest of the planet with Dinosaurs stomping around 
+          and pterosaurs soaring the skies. <br>
+          It seemed that life could continue flourishing until an asteroid struck Earth wiping out most of all land animals and eliminating upto 18% of all marine genera.
+          This was the <b style="color:#F45A36">Triassic-Jussaric Mass Extinction Event</b>. 
+        </p>
       </div>
     </div>
     <div class="EarthPanel">
       <img src="/images/Evolution/Evolution4.png" alt="">
       <div class="content">
-        <p class="year">2021</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas eaque,
-          quidem iusto sed pariatur explicabo
-          optio corporis commodi qui tempora et hic rem est, consectetur modi veritatis sunt soluta ad iste non
-          molestias. Quidem, obcaecati. Soluta laborum magnam suscipit, sunt architecto possimus inventore iure libero
-          accusantium omnis sequi distinctio perspiciatis?</p>
+        <p class="year">80 Million Year Ago</p>
+        <p>The recent discovery of the Chicxulub Crater near Mexico has proven the theory of yet another mass-extinction as true.
+          <br> It was theorized that yet another cosmic body had made contact with ours only to wipe out yet another large percentage of life leading to 
+          <br> an <b style="color:#DAFCFF">impact winter</b>, freezing marine life and bringing a halt to photosynthesis, killing off all the phytoplanktons.
+          This is the most recent mass extinction event called the <b style="color:#F45A36">Cretaceous-Paleogene Mass Extinction</b>.
+        </p>
       </div>
     </div>
     <div class="EarthPanel">
       <img src="/images/Evolution/Evolution5.png" alt="">
       <div class="content">
-        <p class="year">2021</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas eaque, quidem iusto sed pariatur explicabo
-          optio corporis commodi qui tempora et hic rem est, consectetur modi veritatis sunt soluta ad iste non
-          molestias. Quidem, obcaecati. Soluta laborum magnam suscipit, sunt architecto possimus inventore iure libero
-          accusantium omnis sequi distinctio perspiciatis?</p>
+        <p class="year">100,000 Years Ago</p>
+        <p>With our early ancestors being hunter-gatherers, life flourished as mammals ruled the planet with 70% of all animal life consisting of mammals.<br>
+          This is the time when <b style="color:#6A0902">fire was discovered</b> which caused to a domino-effect leading to humans getting intelligent.
+          <br>
+          Our superior intelligence gave us an advantage over most of the species which may have been otherwise physically stronger.
+
+        </p>
       </div>
     </div>
     <div class="EarthPanel">
       <img src="/images/Evolution/Evolution6.png" alt="">
       <div class="content">
-        <p class="year">2021</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas eaque,
-          quidem iusto sed pariatur explicabo
-          optio corporis commodi qui tempora et hic rem est, consectetur modi veritatis sunt soluta ad iste non
-          molestias. Quidem, obcaecati. Soluta laborum magnam suscipit, sunt architecto possimus inventore iure libero
-          accusantium omnis sequi distinctio perspiciatis?</p>
+        <p class="year">1970</p>
+        <p>Unlike every other species alive or dead, us humans never chose to adapt to the planet. Instead, we made the planet adapt to us.
+          We invented refrigerators to keep our food and drinks cold during summers, developed heaters to keep us warm during the winters.
+          <br>
+          With skyscrapers touching clouds and greed-taking over our minds, certain things ended up getting neglected.
+          One of those being harmful emission which gave rise to the sea levels due to global warming.<br>
+          While the previously mentioned mass-extinction events led to a huge loss of life, it was never at a rate of extinction as constant as it is today.
+          The only difference is that this time around; <br><b style="color:#F45A36">WE ARE THE ASTEROID</b>. 
+        </p>
       </div>
     </div>
     <div class="EarthPanel">
       <img src="/images/Evolution/Evolution7.png" alt="">
       <div class="content">
-        <p class="year">2021</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas eaque, quidem iusto sed pariatur explicabo
-          optio corporis commodi qui tempora et hic rem est, consectetur modi veritatis sunt soluta ad iste non
-          molestias. Quidem, obcaecati. Soluta laborum magnam suscipit, sunt architecto possimus inventore iure libero
-          accusantium omnis sequi distinctio perspiciatis?</p>
+        <p class="year">2100</p>
+        <p>It is said that if our ways of operating are not mended, then in a century or two, we will need further adaptations to continue living on what we call our home planet.<br>
+          Alternatively, we could also branch out onto colonizing other planets as is suggested by many famous minds these days.
+          Nobody knows what the future has in store for us, but climate change is one thing we should all be aware about.<br>
+          With rising sea levels, there are islands like in <b style="color:aqua">Maldives and West of Africa that are at a risk of being submerged</b> by 2030.
+          <br>These threats are very serious and might lead to further severe calamities such as hurricanes and tornadoes.
+        </p>
       </div>
     </div>
     <div class="EarthPanel">
       <img src="/images/Evolution/Evolution8.png" alt="">
       <div class="content">
         <p class="year">2021</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas eaque,
-          quidem iusto sed pariatur explicabo
-          optio corporis commodi qui tempora et hic rem est, consectetur modi veritatis sunt soluta ad iste non
-          molestias. Quidem, obcaecati. Soluta laborum magnam suscipit, sunt architecto possimus inventore iure libero
-          accusantium omnis sequi distinctio perspiciatis?</p>
+        <p>We believe it is about time to bring a change
+          <br>
+          A change, to reduce the pesky greenhouse emissions,<br>
+          A change, to choose public transportation,<br>
+          A change, to not waste energy,<br>
+          A change to switch to renewable energy.<br>
+          A change, <b>FOR THE SOCIETY OF TOMORROW</b>.
+          Lest, we risk leaving behind nothing but rubble from what we called our buildings on a planet that would continue being inhabitable for years to come.
+        </p>
       </div>
     </div>
     <div class="EarthPanel">
       <img src="/images/Evolution/Evolution9.png" alt="">
       <div class="content">
         <p class="year">2021</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas eaque, quidem iusto sed pariatur explicabo
-          optio corporis commodi qui tempora et hic rem est, consectetur modi veritatis sunt soluta ad iste non
-          molestias. Quidem, obcaecati. Soluta laborum magnam suscipit, sunt architecto possimus inventore iure libero
-          accusantium omnis sequi distinctio perspiciatis?</p>
+        <p>
+           <br>
+           A conclusion to draw from the previous mass extinctions is that LIFE ALWAYS FINDS A WAY to flourish on our planet.
+           <br>
+           Despite all the devastations, it has been through, life has still continued to grow around us.
+           After multiple volcano explosions, meteor strikes, ice ages; life has never seized to exist and all of this suggests only one thing.<br>
+
+        </p>
       </div>
     </div>
 
@@ -136,14 +163,19 @@
       if (open == 0) {
         chatbotScreen.style.display = "block";
         open = 1;
+        removeStyling();
       }
       else if (open == 1) {
         chatbotScreen.style.display = "none";
         open = 0;
       }
-
+      
     }
-
+    function removeStyling()
+    {
+      toBeHiddenPoweredBy = document.getElementById('agent-avatar');
+      console.log(toBeHiddenPoweredBy);
+    }
 
     setTimeout(function () {
       const chatCompany = document.getElementsByClassName('b-agent-demo_powered_by');
